--- a/KProject.Application/View/EditVehicleDialog.xaml
+++ b/KProject.Application/View/EditVehicleDialog.xaml
@@ -7,7 +7,7 @@
         xmlns:model="clr-namespace:Model;assembly=Model"
         xmlns:local="clr-namespace:KProject.Application.View"
         mc:Ignorable="d"
-        Title="EditVehicleDialog" Height="auto" Width="450">
+        Title="EditVehicleDialog" Height="auto" Width="450" SizeToContent="Height" ResizeMode="NoResize">
 
     <Grid>
         <ItemsControl ItemsSource="{Binding Properties}">
@@ -18,8 +18,16 @@
                             <ColumnDefinition/>
                             <ColumnDefinition/>
                         </Grid.ColumnDefinitions>
-                        <TextBlock Text="{Binding PropertyName}"/>
-                        <TextBox Grid.Column="1" Text="{Binding Value}"/>
+                        <TextBlock Margin="3" FontSize="14" Text="{Binding PropertyName}"/>
+                        <TextBox Margin="3"  FontSize="14" Grid.Column="1" IsEnabled="{Binding CanWrite}">
+                            <TextBox.Text>
+                                <Binding Path="Value">
+                                    <Binding.ValidationRules>
+                                        <ExceptionValidationRule />
+                                    </Binding.ValidationRules>
+                                </Binding>
+                            </TextBox.Text>
+                        </TextBox>
                     </Grid>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
