--- a/KProject.Application/View/MainWindow.xaml
+++ b/KProject.Application/View/MainWindow.xaml
@@ -36,10 +36,10 @@
 
         <Menu Grid.ColumnSpan="3">
             <MenuItem Header="File">
-                <MenuItem Header="Open ..."/>
+                <MenuItem Header="Open ..." Command="{Binding OpenFileCommand}"/>
                 <MenuItem Header="Save as ...">
-                    <MenuItem Header="Binary file"/>
-                    <MenuItem Header="XML file"/>
+                    <MenuItem Header="Binary file" Command="{Binding SaveBinaryCommand}"/>
+                    <MenuItem Header="XML file" Command="{Binding SaveXMLCommand}"/>
                 </MenuItem>
             </MenuItem>
             <MenuItem Header="Help">
