--- a/KProject.Application/Style/DefaultStyle.xaml
+++ b/KProject.Application/Style/DefaultStyle.xaml
@@ -8,4 +8,10 @@
         <Setter Property="Margin" Value="0, 5"/>
     </Style>
 
+    <Style x:Key="SettingsInputFieldStyle" TargetType="{x:Type TextBox}">
+        <Setter Property="Width" Value="33"/>
+        <Setter Property="MaxLength" Value="4"/>
+        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+    </Style>
+
 </ResourceDictionary>
