--- a/KProject.Application/View/MainWindow.xaml
+++ b/KProject.Application/View/MainWindow.xaml
@@ -16,7 +16,6 @@
             </ResourceDictionary.MergedDictionaries>
 
             <converters:VehicleIconConverter x:Key="VehicleIconConverter"/>
-            <converters:VehicleManagementEnabledConverter x:Key="ButtonEnabledConverter"/>
         </ResourceDictionary>
     </Window.Resources>
 
@@ -46,7 +45,7 @@
                 </MenuItem>
             </MenuItem>
             <MenuItem Header="Data">
-                <MenuItem Header="Generate random data" Command="{Binding GenerateData}"/>
+                <MenuItem Header="Generate random data" Command="{Binding GenerateDataCommand}"/>
             </MenuItem>
             <MenuItem Header="Help">
                 <MenuItem Header="About"/>
@@ -56,8 +55,8 @@
         <TextBlock Grid.Row="1" Text="Garages" Style="{StaticResource HeaderStyle}"/>
         <Menu Grid.Row="2" Margin="5, 0" Background="Wheat">
             <MenuItem Header="Add" Command="{Binding AddGarageCommand}"/>
-            <MenuItem Header="Edit" Command="{Binding EditGarageCommand}" IsEnabled="{Binding Path=SelectedGarage, Converter={StaticResource ButtonEnabledConverter}}"/>
-            <MenuItem Header="Remove" Command="{Binding RemoveGarageCommand}" IsEnabled="{Binding Path=SelectedGarage, Converter={StaticResource ButtonEnabledConverter}}"/>
+            <MenuItem Header="Edit" Command="{Binding EditGarageCommand}"/>
+            <MenuItem Header="Remove" Command="{Binding RemoveGarageCommand}"/>
             <MenuItem Header="Clear" Command="{Binding ClearGaragesCommand}"/>
         </Menu>
         <ListBox Grid.Row="3" Margin="5, 0, 5, 5" ItemsSource="{Binding Garages.View}" SelectedValue="{Binding Path=SelectedGarage, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
@@ -77,7 +76,7 @@
         </ListBox>
 
         <TextBlock Grid.Row="1" Grid.Column="1" Text="Vehicles" Style="{StaticResource HeaderStyle}"/>
-        <Menu Grid.Row="2" Grid.Column="1" Margin="5, 0" Background="Wheat" IsEnabled="{Binding Path=SelectedGarage, Converter={StaticResource ButtonEnabledConverter}}">
+        <Menu Grid.Row="2" Grid.Column="1" Margin="5, 0" Background="Wheat">
             <MenuItem Header="Add">
                 <MenuItem Header="Car" BorderBrush="Wheat" Background="Wheat" Command="{Binding AddVehicleCommand}" CommandParameter="Car"/>
                 <MenuItem Header="Lorry" BorderBrush="Wheat" Background="Wheat" Command="{Binding AddVehicleCommand}" CommandParameter="Lorry"/>
